objects/Treasury_Service_Attributes__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Lockbox_Code__c</fullName>
        <label>Internal Lockbox Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lockbox_Location__c</fullName>
        <label>Lockbox Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lockbox_Status__c</fullName>
        <label>Lockbox Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>One_to_Many_Type__c</fullName>
        <label>One to Many Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lockbox Location</fullName>
                </value>
                <value>
                    <fullName>Scanner Details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scanner_Delivery_Date__c</fullName>
        <label>Scanner Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scanner_Model__c</fullName>
        <label>Scanner Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CheXpress CX30</fullName>
                </value>
                <value>
                    <fullName>TellerScan TS240</fullName>
                </value>
                <value>
                    <fullName>TellerScan TS500</fullName>
                </value>
                <value>
                    <fullName>EC7500i series scanners</fullName>
                </value>
                <value>
                    <fullName>CR-120</fullName>
                </value>
                <value>
                    <fullName>CR-150</fullName>
                </value>
                <value>
                    <fullName>CR-190i II</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scanner_Name__c</fullName>
        <label>Scanner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scanner_Notes__c</fullName>
        <label>Scanner Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scanner_Serial_Number__c</fullName>
        <label>Scanner Serial Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scanner_Type__c</fullName>
        <label>Scanner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Volume</fullName>
                </value>
                <value>
                    <fullName>Low Volume</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treasury_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Treasury Service Attributes</relationshipLabel>
        <relationshipName>Treasury_Service_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Treasury Service Attribute</label>
    <nameField>
        <label>Treasury Service Attributes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treasury Service Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>